--- a/index.html
+++ b/index.html
@@ -1,4 +1,29 @@
 <!-- Booking Widget for meromutu010@gmail.com -->
-<iframe src="http://localhost:8000/widget/meromutu010-at-gmailcom" width="100%" height="600" frameborder="0"
+<!-- <iframe src="http://localhost:8000/widget/meromutu010-at-gmailcom" width="100%" height="600" frameborder="0"
     style="border: none; border-radius: 8px; box-shadow: 0 4px 6px rgba(0,0,0,0.1);" title="Book Appointment">
-</iframe>
+</iframe> -->
+
+
+
+<!-- Booking Widget for meromutu010@gmail.com -->
+<div id="booking-widget-TrghZUqr"></div>
+<script>
+(function() {
+    var iframe = document.createElement('iframe');
+    iframe.src = 'http://localhost:8000/widget/meromutu010-at-gmailcom';
+    iframe.width = '100%';
+    iframe.height = '100%';
+    iframe.frameBorder = '0';
+    iframe.style.border = 'none';
+    iframe.style.borderRadius = '8px';
+    iframe.style.boxShadow = '0 4px 6px rgba(0,0,0,0.1)';
+    iframe.title = 'Book Appointment';
+    
+    var container = document.getElementById('booking-widget-TrghZUqr');
+    if (container) {
+        container.appendChild(iframe);
+    }
+})();
+</script>
+
+<!-- http://localhost:8000/widget/meromutu010-at-gmailcom -->
