--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- Booking Widget for meromutu010@gmail.com -->
+Booking Widget for meromutu010@gmail.com -->
 <!-- <iframe src="http://localhost:8000/widget/meromutu010-at-gmailcom" width="100%" height="600" frameborder="0"
     style="border: none; border-radius: 8px; box-shadow: 0 4px 6px rgba(0,0,0,0.1);" title="Book Appointment">
 </iframe> -->
@@ -6,7 +6,7 @@
 
 
 <!-- Booking Widget for meromutu010@gmail.com -->
-<div id="booking-widget-TrghZUqr"></div>
+<!-- <div id="booking-widget-TrghZUqr"></div>
 <script>
 (function() {
     var iframe = document.createElement('iframe');
@@ -24,6 +24,18 @@
         container.appendChild(iframe);
     }
 })();
-</script>
+</script> -->
 
 <!-- http://localhost:8000/widget/meromutu010-at-gmailcom -->
+
+
+
+ Booking Widget for Himalayan Sunrise Trek -->
+<iframe 
+    src="http://localhost:8000/widget/meromutu010-at-gmailcom" 
+    width="100%" 
+    height="600" 
+    frameborder="0" 
+    style="border: none; border-radius: 8px; box-shadow: 0 4px 6px rgba(0,0,0,0.1);"
+    title="Book Appointment">
+</iframe>
